--- a/requirements.txt
+++ b/requirements.txt
@@ -1,84 +1,82 @@
-asgiref==3.2.10
-asttokens==2.0.5
-attrs==21.4.0
-autobahn==22.3.2
-Automat==20.2.0
-backcall==0.2.0
-boto3==1.20.20
-botocore==1.23.20
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.10
-click==8.1.2
-constantly==15.1.0
-cryptography==36.0.2
-daphne==3.0.2
-debugpy==1.6.0
-decorator==5.1.1
-Django==3.1.2
-django-cors-headers==3.11.0
-django-crontab==0.7.1
-django-environ==0.8.1
-django-otp==1.0.3
-django-phonenumber-field==6.0.0
-djangorestframework==3.12.1
-djangorestframework-simplejwt==5.1.0
-entrypoints==0.4
-et-xmlfile==1.0.1
-executing==0.8.3
-h11==0.13.0
-hyperlink==21.0.0
-idna==3.3
-importlib-metadata==4.11.3
-incremental==21.3.0
-ipykernel==6.13.1
-ipython==8.4.0
-jdcal==1.4.1
-jedi==0.18.1
-jmespath==0.10.0
-jupyter-client==7.3.3
-jupyter-core==4.10.0
-matplotlib-inline==0.1.3
-nest-asyncio==1.5.5
-numpy==1.19.4
-openpyxl==3.0.9
-packaging==21.3
-pandas==1.2.0
-parso==0.8.3
-pexpect==4.8.0
-phonenumbers==8.12.39
-pickleshare==0.7.5
-Pillow==8.2.0
-prompt-toolkit==3.0.29
-psutil==5.9.1
-psycopg2==2.9.3
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-Pygments==2.12.0
-PyJWT==2.3.0
-pyOpenSSL==22.0.0
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pytz==2020.1
-pyzmq==23.1.0
-qrcode==6.1
-requests==2.27.1
-rest-condition==1.0.3
-s3transfer==0.5.0
-service-identity==21.1.0
-six==1.15.0
-sqlparse==0.4.1
-stack-data==0.2.0
-tornado==6.1
-traitlets==5.2.2.post1
-Twisted==22.4.0
-txaio==22.2.1
-typing-extensions==4.2.0
-urllib3==1.26.7
-wcwidth==0.2.5
-xlrd==2.0.1
-zipp==3.8.0
-zope.interface==5.4.0
+appdirs==1.4.3
+apturl==0.5.2
+bcrypt==3.1.7
+blinker==1.4
+Brlapi==0.7.0
+certifi==2019.11.28
+chardet==3.0.4
+chrome-gnome-shell==0.0.0
+Click==7.0
+colorama==0.4.3
+command-not-found==0.3
+cryptography==2.8
+cupshelpers==1.0
+dbus-python==1.2.16
+defer==1.0.6
+distlib==0.3.0
+distro==1.4.0
+distro-info===0.23ubuntu1
+duplicity==0.8.12.0
+entrypoints==0.3
+fasteners==0.14.1
+filelock==3.0.12
+future==0.18.2
+httplib2==0.14.0
+idna==2.8
+importlib-metadata==1.5.0
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+libvirt-python==6.1.0
+lockfile==0.12.2
+louis==3.12.0
+macaroonbakery==1.3.1
+Mako==1.1.0
+MarkupSafe==1.1.0
+meson==0.53.2
+monotonic==1.5
+more-itertools==4.2.0
+netifaces==0.10.4
+oauthlib==3.1.0
+olefile==0.46
+paramiko==2.6.0
+pexpect==4.6.0
+Pillow==7.0.0
+protobuf==3.6.1
+psutil==5.5.1
+pycairo==1.16.2
+pycups==1.9.73
+Pygments==2.3.1
+PyGObject==3.36.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyRFC3339==1.1
+python-apt==2.0.0+ubuntu0.20.4.8
+python-dateutil==2.7.3
+python-debian===0.1.36ubuntu1
+pytz==2019.3
+pyxdg==0.26
+PyYAML==5.3.1
+reportlab==3.5.34
+requests==2.22.0
+requests-unixsocket==0.2.0
+screen-resolution-extra==0.0.0
+SecretStorage==2.3.1
+simplejson==3.16.0
+six==1.14.0
+system-service==0.3
+systemd-python==234
+ubuntu-advantage-tools==27.11.2
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.8
+urwid==2.0.1
+usb-creator==0.3.7
+virtualenv==20.0.17
+wadllib==1.3.3
+xkit==0.0.0
+zipp==1.0.0
